# archcleanup

./: .gitignore  LICENSE  archcleanup.cabal
src/: Algs.hs  Cycles.hs  Graphs.hs  Main.hs  Pacman.hs  Prepare.hs  Tables.hs  Tools.hs
