cabal-version:   3.0
name:            archcleanup
synopsis:        Cleaning packages
description:     Program for cleaning dependent packages
version:         0.1.0.0
homepage:        https://github.com/faceleft/archcleanup/
license:         BSD-3-Clause
license-file:    LICENSE
extra-doc-files: README.md
author:          Lesnikov Vladimir
maintainer:      v.a.lesnikov@vk.com
stability:       alpha
category:        System
build-type:      Simple

source-repository head
  type:     git
  location: https://github.com/faceleft/archcleanup.git

common build-directives
  build-depends:      base >=4.11 && <5
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

executable archcleanup
  import:         build-directives,
  main-is:        Main.hs
  other-modules:
    Cycles
    Graphs
    Pacman
    Prepare
    Tools

  build-depends:
    , array                 <1
    , containers            >=0.6 && <1
    , directory             >=1.3 && <2
    , hashable              >=1   && <2
    , process               >=1.6 && <2
    , text                  >=1.2 && <3
    , unordered-containers  >=0.2 && <1

  hs-source-dirs: src
